# uvofile

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.minio.yml  docker-compose.yml
migrations/: 20241109131147_create_images_table.sql  20241110160627_add_resized_urls_to_images.sql
src/: main.rs
src/api/: image_data.rs  mod.rs  models.rs  upload_image.rs
src/image_processing/: mod.rs
src/storage/: s3_client.rs
