[package]
name = "uvofile"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.59.0"
image = { version = "0.25.5", features = ["jpeg"]}
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
anyhow = "1.0"
actix-rt = "2.5"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
infer = "0.16"
lazy_static = "1.4.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "chrono",
    "migrate",
    "macros",
] }
